# hdmeal-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build-deploy.yml
app/: config.py  dependencies.py  exceptions.py  main.py
app/db/: __init__.py
app/ingestion/: auxiliary.py  http_client.py  neis.py
app/routers/: app_api.py  chatbot.py
app/schemas/: __init__.py  app.py  chatbot.py  data.py  user_settings.py
app/services/: chatbot_service.py  data_service.py  ingestion_service.py  user_service.py
app/tasks/: scheduler.py
app/utils/: base58.py  logging.py  security.py  timezone.py
